# monorepo-turborepo-python

./: README.md  package.json  pnpm-lock.yaml
apps/hello-fastapi/: .flake8  noxfile.py  package.json  pyproject.toml
apps/hello-fastapi/tests/: test_hello.py
