[tool.poetry]
name = "hello-fastapi"
version = "0.1.0"
description = "Hello FastAPI"
authors = ["Sinan Bekar <sinanbekar.work@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    # Include this classifier to prevent accidently publishing private code to PyPI.
    #   https://pypi.org/classifiers/
    "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
fastapi = ">=0.78.0"
uvicorn = {extras = ["standard"], version = ">=0.18.2"}
gunicorn = ">=20.1.0"


[tool.poetry.dev-dependencies]
nox-poetry = ">=1.0.1"
poethepoet = ">=0.15.0"
pex = ">=2.1.94"

# Testing
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"

# Type Checking
mypy = ">=0.961"
typeguard = ">=2.13.3"

# Linting
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=22.7.1"
flake8-broken-line = ">=0.4.0"
flake8-comprehensions = ">=3.10.0"
pep8-naming = ">=0.13.0"

# Formatting
black = ">=22.6.0"
isort = ">=5.10.1"

[tool.poe.tasks]
_build_wheel="poetry build"
_build_pex="pex dist/hello_fastapi*.whl -o dist/hello_fastapi.pex"
build = ["_build_wheel", "_build_pex"]
dev = "uvicorn hello_fastapi.main:app --port 5000 --reload"
lint = "poetry run nox -s lint"
test = "poetry run nox -s test"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.isort]
profile = "black"
lines_after_imports = 2
force_sort_within_sections = true
skip_gitignore = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["hello_fastapi", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"